Added jumbotrons for a component under construction. Added lauout for single campaign.

--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -9874,5 +9874,8 @@ body {
   bottom: 70px;
   right: 25px; }
 
+.widget--clicable {
+  cursor: pointer; }
+
 html body .app.flex-row.align-items-center {
   height: 100vh; }
