Implemented Price Zone sttings

--- a/src/scss/style.css
+++ b/src/scss/style.css
@@ -9877,5 +9877,8 @@ body {
 .widget--clicable {
   cursor: pointer; }
 
+.tr--clicable {
+  cursor: pointer; }
+
 html body .app.flex-row.align-items-center {
   height: 100vh; }
